Fix interactability of left sidebar by increasing z-index

--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ header {
     position: absolute;
     left: 20px;
     top: 80px; /* Чуть опустили, чтобы не пересекало линию шапки */
-    z-index: 2;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
